Commit for Assignment: CSS Properties

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,40 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: white;
+  color: #2B303A;
+
 }
 
 nav {
-  background-color: rgba(0,0,0,.5);
+  background-color: #2B303A;
   float: left;
   position: fixed;
   width: 100%;
 }
+
+nav a:link{
+  font-family: sans-serif;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
+}
+
+nav a:hover{
+  font-family: sans-serif;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+nav a:active{
+  font-family: sans-serif;
+  font-size: 16px;
+  color: orange;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+
 
 .logo {
   margin: 20px;
@@ -30,6 +56,41 @@ nav {
 
 .right {
   float: right;
+}
+
+figcaption {
+  font-family: sans-serif;
+  font-size: 12px;
+  margin-bottom: 20px;
+}
+
+h1 {
+  font-family: sans-serif;
+  font-size: 42px;
+  line-height: 48px;
+
+}
+
+h3 {
+  font-family: sans-serif;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.author {
+  font-family: sans-serif;
+  font-size: 12px;
+  line-height: 30px;
+  margin-bottom: 16px;
+}
+
+.story-text {
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+}
+.story-text p{
+margin-bottom: 16px;
 }
 
 ul {
